crates/ddlog-syntax/tests/parse/pass/toilet.dl
// kind:expr validate:false pass:true ignore:false file:'ddlog-syntax/src/parser/expr.rs' line:238 column:3
|| {}
