crates/ddlog-syntax/tests/parse/fail/unclosed_block.dl
// kind:expr validate:false pass:false ignore:false file:'ddlog-syntax/src/parser/stmt.rs' line:138 column:3
{{ 10 }
